# devenv-generator

./: .gitignore  CLAUDE.md  IMPROVEMENT_PLAN.md  README.md  TESTING.md  pyproject.toml
.forgejo/workflows/: CLAUDE.md  ci.yml
profiles/: mirustech.yaml
src/mirustech/devenv_generator/: __init__.py  cli.py  generator.py  models.py  settings.py
src/mirustech/devenv_generator/adapters/: __init__.py  docker_registry.py  git_client.py
src/mirustech/devenv_generator/application/: __init__.py
src/mirustech/devenv_generator/application/use_cases/: __init__.py  build_decision.py  build_or_pull.py
src/mirustech/devenv_generator/commands/: __init__.py  config.py  diagnostics.py  lifecycle.py  management.py  ports.py  profiles.py
src/mirustech/devenv_generator/profiles/: data-science.yaml  default.yaml  minimal.yaml  mirustech.yaml  web-dev.yaml
src/mirustech/devenv_generator/templates/: Dockerfile.j2  devcontainer.json.j2  docker-compose.sandbox.yml.j2  docker-compose.yml.j2  entrypoint.sh.j2  init-env.sh.j2
src/mirustech/devenv_generator/utils/: __init__.py  process_manager.py  subprocess.py
tests/: __init__.py  test_build_decision.py  test_build_or_pull.py  test_cli.py  test_config.py  test_diagnostics.py  test_docker_registry.py  test_generator.py  test_git_client.py  test_integration_lifecycle.py  test_integration_ports.py  test_integration_sandbox.py  test_lifecycle.py  test_management.py  test_models.py  test_ports.py  test_process_manager.py  test_profiles.py  test_settings.py  test_subprocess.py
